--- a/public/partials/services.html
+++ b/public/partials/services.html
@@ -1,21 +1,21 @@
 <div class="service-wrapper">
 	<div class="service">
-		<a ui-sref="service" class="services-container">
+		<a ui-sref="service({service: 'design'})" class="services-container">
 			<h3>DESIGN</h3>
 		</a>
 	</div>
 	<div class="service">
-		<a ui-sref="service" class="services-container">
+		<a ui-sref="service({service: 'development'})" class="services-container">
 			<h3>DEVELOPMENT</h3>
 		</a>
 	</div>
 	<div class="hello service">
-		<a ui-sref="service" class="services-container">
+		<a ui-sref="service({service: 'marketing'})" class="services-container">
 			<h3>MARKETING</h3>
 		</a>
 	</div>
 	<div class="service">
-		<a ui-sref="service" class="services-container">
+		<a ui-sref="service({service: 'architecture'})" class="services-container">
 			<h3>ARCHITECTURE</h3>
 		</a>
 	</div>
