--- a/src/scss/framework/_components.scss
+++ b/src/scss/framework/_components.scss
@@ -4,3 +4,11 @@
     box-shadow: 0px 0px 10px #777;
     padding: 15px;
 }
+
+.blur {
+	-webkit-filter: blur(3px);
+	filter: blur(3px);
+}
+.bg-transparent {
+	background-color: transparent !important;
+}
