--- a/src/scss/layouts/_footer.scss
+++ b/src/scss/layouts/_footer.scss
@@ -2,7 +2,9 @@
 	background-color: rgb(50,50,50);
 	position: relative;
 	height: calc(70vh + 18px);
-	display: flex;
+	color: $white;
+	@extend %flex;
+	@extend %flex-column;
 }
 .map-toggler_open, .map-toggler_close {
 	position: absolute;
@@ -25,7 +27,8 @@
     height: 70vh;
     width: 100%;
     background-color: rgba(50,50,50,.9);
-	color: #fff;
+	//color: #fff;
+	@extend %flex;
 }
 .footer-content {
 	@extend %full-width;
@@ -35,7 +38,7 @@
 	flex-wrap: wrap;
 	padding: 5rem 0;
 	div {
-		@extend %display-flex;
+		@extend %flex;
 		@extend %flex-center;
 		width: 25%;
 	}
@@ -50,32 +53,38 @@
 }
 .contact-info {
 	flex-direction: column;
+	span {
+		width: 90%;
+		text-align: left;
+		margin: 5px 0;
+		font-size: 1.2em;
+	}
 }
-
-.contact-info span {
-	width: 90%;
-	text-align: left;
-	margin: 5px 0;
-	font-size: 1.2em;
-}
-
 .social-icon {
 	margin: 0 5px;
-	.fa { color: #fff;}
+	//.fa { color: #fff;}
 }
 
 .trademark {
-	color: #fff;
-	//position: relative;
-	//margin-top: 70vh;
+	//color: #fff;
 }
 
 @media screen and (max-width: 420px) {
-	.footer-container {
-		height: auto;
+	.map-container {
+		height: calc(100% - 19px);
 	}
-	.footer-content {
-		flex-direction: column;
-		flex-wrap: nowrap;
+	.footer{
+		height: auto;
+		#{&}-container {
+			height: auto;
+		}
+		#{&}-content {
+			flex-direction: column;
+			flex-wrap: nowrap;
+			div {
+				padding: .75rem 0;
+				width: 100%;
+			}
+		}
 	}
 }
