--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -7,7 +7,7 @@
     top: 0;
     left: 0;
     z-index: 99;
-    width: 100%;
+    width: 100vw;
     //background-color: #fafafa;
     transition: .6s ease all;
     #{&}-container {
