--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -98,79 +98,84 @@ function scaleBannerVideoSize(element){
 </div>
 
 <div class="wedo">
-    <div class="service-description">
-        <div class="service-description-container">
-            <h3>Graphic Design</h3>
-            <p class="paragraph">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Itaque dolores illum ab laudantium ipsam, quia non,
-                aspernatur exercitationem pariatur labore odit quidem
-                officia eius expedita deserunt, beatae culpa sapiente
-                perferendis.
-            </p>
+    <div class="wedo-wrapper">
+        <div class="service-description">
+            <div class="service-description-container">
+                <h3>Graphic Design</h3>
+                <p class="paragraph">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Itaque dolores illum ab laudantium ipsam, quia non,
+                    aspernatur exercitationem pariatur labore odit quidem
+                    officia eius expedita deserunt, beatae culpa sapiente
+                    perferendis.
+                </p>
+            </div>
+        </div>
+        <figure class="wedo-fig ribon-left">
+            <img class="wedo-fig_img" src="res/img/Captura.jpg" alt="Design">
+            <figcaption class="wedo-fig_cap">
+                <a href="" ui-sref="service({service: 'design'})"></a>
+            </figcaption>
+        </figure>
+    </div>
+    <div class="wedo-wrapper">
+        <figure class="wedo-fig ribon-right">
+            <img class="wedo-fig_img" src="res/img/Captura.jpg" alt="Development">
+            <figcaption class="wedo-fig_cap">
+                <a href="" ui-sref="service({service: 'development'})"></a>
+            </figcaption>
+        </figure>
+        <div class="service-description">
+            <div class="service-description-container">
+                <h3 class="text-right">Development</h3>
+                <p class="paragraph">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Itaque dolores illum ab laudantium ipsam, quia non,
+                    aspernatur exercitationem pariatur labore odit quidem
+                    officia eius expedita deserunt, beatae culpa sapiente
+                    perferendis.
+                </p>
+            </div>
         </div>
     </div>
-    <figure class="wedo-fig ribon-left">
-        <img class="wedo-fig_img" src="res/img/Captura.jpg" alt="Design">
-        <figcaption class="wedo-fig_cap">
-            <a href="" ui-sref="service({service: 'design'})"></a>
-        </figcaption>
-    </figure>
-
-    <figure class="wedo-fig ribon-right">
-        <img class="wedo-fig_img" src="res/img/Captura.jpg" alt="Development">
-        <figcaption class="wedo-fig_cap">
-            <a href="" ui-sref="service({service: 'development'})"></a>
-        </figcaption>
-    </figure>
-    <div class="service-description">
-        <div class="service-description-container">
-            <h3 class="text-right">Development</h3>
-            <p class="paragraph">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Itaque dolores illum ab laudantium ipsam, quia non,
-                aspernatur exercitationem pariatur labore odit quidem
-                officia eius expedita deserunt, beatae culpa sapiente
-                perferendis.
-            </p>
+    <div class="wedo-wrapper">
+        <div class="service-description">
+            <div class="service-description-container">
+                <h3>Marketing</h3>
+                <p class="paragraph">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Itaque dolores illum ab laudantium ipsam, quia non,
+                    aspernatur exercitationem pariatur labore odit quidem
+                    officia eius expedita deserunt, beatae culpa sapiente
+                    perferendis.
+                </p>
+            </div>
         </div>
+        <figure class="wedo-fig ribon-left">
+            <img class="wedo-fig_img" src="res/img/Captura.jpg" alt="Marketing">
+            <figcaption class="wedo-fig_cap">
+                <a href="" ui-sref="service({service: 'marketing'})"></a>
+            </figcaption>
+        </figure>        
     </div>
-
-    <div class="service-description">
-        <div class="service-description-container">
-            <h3>Marketing</h3>
-            <p class="paragraph">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Itaque dolores illum ab laudantium ipsam, quia non,
-                aspernatur exercitationem pariatur labore odit quidem
-                officia eius expedita deserunt, beatae culpa sapiente
-                perferendis.
-            </p>
-        </div>
-    </div>
-    <figure class="wedo-fig ribon-left">
-        <img class="wedo-fig_img" src="res/img/Captura.jpg" alt="Marketing">
-        <figcaption class="wedo-fig_cap">
-            <a href="" ui-sref="service({service: 'marketing'})"></a>
-        </figcaption>
-    </figure>
-
-    <figure class="wedo-fig ribon-right">
-        <img class="wedo-fig_img" src="res/img/Captura.jpg" alt="Architecture">
-        <figcaption class="wedo-fig_cap">
-            <a href="" ui-sref="service({service: 'architecture'})"></a>
-        </figcaption>s
-    </figure>
-    <div class="service-description">
-        <div class="service-description-container">
-            <h3 class="text-right">Architecture</h3>
-            <p class="paragraph">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Itaque dolores illum ab laudantium ipsam, quia non,
-                aspernatur exercitationem pariatur labore odit quidem
-                officia eius expedita deserunt, beatae culpa sapiente
-                perferendis.
-            </p>
+    <div class="wedo-wrapper">
+        <figure class="wedo-fig ribon-right">
+            <img class="wedo-fig_img" src="res/img/Captura.jpg" alt="Architecture">
+            <figcaption class="wedo-fig_cap">
+                <a href="" ui-sref="service({service: 'architecture'})"></a>
+            </figcaption>s
+        </figure>
+        <div class="service-description">
+            <div class="service-description-container">
+                <h3 class="text-right">Architecture</h3>
+                <p class="paragraph">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Itaque dolores illum ab laudantium ipsam, quia non,
+                    aspernatur exercitationem pariatur labore odit quidem
+                    officia eius expedita deserunt, beatae culpa sapiente
+                    perferendis.
+                </p>
+            </div>
         </div>
     </div>
 </div>
