--- a/src/scss/layouts/_contact.scss
+++ b/src/scss/layouts/_contact.scss
@@ -25,3 +25,10 @@
 	background-color: $primary-color-dark;
 	//box-shadow: 0 0 10px rgba(0,0,0,.65);
 }
+
+@media screen and (max-width: 420px) {
+    .contact {
+        width: 100%;
+        padding-bottom: 2rem;
+    }
+}
