--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -77,10 +77,10 @@ function scaleBannerVideoSize(element){
 
 
 <div class="banner row row-full-screen">
-    <div class="row-content row-content_medium row-elements_between flex-center">
+    <!--<div class="row-content row-content_medium row-elements_between flex-center">
         <img src="res/img/logo.png" alt="logo">
         <h1>MAKE...<br> <span class="typing"></span></h1>
-    </div>
+    </div>-->
 </div>
 
 <div class="row">
