--- a/public/res/css/styles.css
+++ b/public/res/css/styles.css
@@ -447,6 +447,11 @@ $bg-color-dark:;
 .text-right {
   text-align: right; }
 
+*, *::after, *::before, *:after, *:before {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box; }
+
 body {
   color: #333;
   background-color: #fafafa;
@@ -474,10 +479,10 @@ a:hover {
 .wedo, .wedo-fig_cap a, .footer-content, .modal-flex-wrapper {
   display: flex; }
 
-.header .header-container, .footer-content {
+.header .header-container {
   justify-content: space-between; }
 
-.menu-wrapper, .service-description, .services-container, .description-service, .element-info, .footer-content div {
+.menu-wrapper, .service-description, .services-container, .description-service, .element-info, .logo-icon, .social, .social-icon {
   justify-content: center;
   align-items: center; }
 
@@ -529,20 +534,20 @@ a:hover {
 main {
   padding-top: 91px; }
 
-.header .header-container, .header, .navbar, .wedo-wrapper, .service-description, .services-container, .service-banner, .description-service, .element-info, .footer, .footer-container, .footer-content div, .moda-contento {
+.header .header-container, .header, .navbar, .wedo-wrapper, .service-description, .services-container, .service-banner, .description-service, .element-info, .footer, .footer-container, .logo-icon, .footer-nav, .contact-info span, .social, .moda-contento {
   display: flex; }
 
-.menu-wrapper, .service-description, .services-container, .description-service, .element-info, .footer-content div {
+.menu-wrapper, .service-description, .services-container, .description-service, .element-info, .logo-icon, .social, .social-icon {
   justify-content: center;
   align-items: center; }
 
-.header {
+.header, .footer-nav {
   justify-content: center; }
 
-.navbar {
+.navbar, .footer-container {
   align-items: center; }
 
-.header .header-container, .footer-content {
+.header .header-container {
   justify-content: space-between; }
 
 .element-info, .footer {
@@ -776,53 +781,55 @@ a.active {
 
   .navbar-mobile {
     left: 0; } }
-.homepage-hero-module {
-  border-right: none;
-  border-left: none;
-  position: relative; }
-
+/*.homepage-hero-module {
+    border-right: none;
+    border-left: none;
+    position: relative;
+}
 .no-video .video-container video,
 .touch .video-container video {
-  display: none; }
-
+    display: none;
+}
 .no-video .video-container .poster,
 .touch .video-container .poster {
-  display: block !important; }
-
+    display: block !important;
+}
 .video-container {
-  position: relative;
-  bottom: 0%;
-  left: 0%;
-  height: 100vh;
-  width: 100%;
-  overflow: hidden;
-  background: #000; }
-
+    position: relative;
+    bottom: 0%;
+    left: 0%;
+    height: 100vh;
+    width: 100%;
+    overflow: hidden;
+    background: #000;
+}
 .video-container .poster img {
-  width: 100%;
-  bottom: 0;
-  position: absolute; }
-
+    width: 100%;
+    bottom: 0;
+    position: absolute;
+}
 .hidden {
-  display: none; }
-
+	display: none;
+}
 .video-container .filter {
-  z-index: 100;
-  position: absolute;
-  background: rgba(0, 0, 0, 0.4);
-  width: 100%; }
-
+    z-index: 100;
+    position: absolute;
+    background: rgba(0, 0, 0, 0.4);
+    width: 100%;
+}
 .video-container video {
-  position: absolute;
-  z-index: 0;
-  bottom: 0; }
-
+    position: absolute;
+    z-index: 0;
+    bottom: 0;
+}
 .video-container video.fillWidth {
-  width: 100%; }
-
+    width: 100%;
+}*/
 .banner {
   margin-top: -91px;
-  background-repeat: repeat; }
+  background-image: url("../img/banner.png");
+  background-repeat: no-repeat;
+  background-size: 100% 100%; }
   .banner img {
     width: 40%;
     height: auto; }
@@ -849,6 +856,9 @@ hr {
   line-height: 1.4;
   color: #212121; }
 
+@media screen and (max-width: 420px) {
+  .about {
+    width: 95%; } }
 .wedo {
   flex-direction: row;
   flex-wrap: wrap;
@@ -1119,9 +1129,11 @@ a.is-checked, a.is-checked:hover {
   background-color: #323232;
   position: relative;
   height: calc(70vh + 18px);
-  color: #fff; }
+  color: #fff;
+  font-size: 1.1em; }
 
-.map-toggler_open, .map-toggler_close {
+/*.map-toggler_open,*/
+.map-toggler_close {
   position: absolute;
   top: 0;
   right: 0;
@@ -1145,8 +1157,7 @@ a.is-checked, a.is-checked:hover {
 
 .footer-content {
   flex-direction: row;
-  flex-wrap: wrap;
-  padding: 5rem 0; }
+  flex-wrap: wrap; }
   .footer-content div {
     width: 25%; }
 
@@ -1155,17 +1166,46 @@ a.is-checked, a.is-checked:hover {
 
 .footer-nav {
   flex-direction: column; }
+  .footer-nav a {
+    color: #fff;
+    margin: .3rem auto; }
+  .footer-nav a.active {
+    border-bottom: 1px solid #fff; }
 
-.contact-info {
-  flex-direction: column; }
-  .contact-info span {
-    width: 90%;
-    text-align: left;
-    margin: 5px 0;
-    font-size: 1.2em; }
+.contact-info span {
+  width: 90%;
+  text-align: left;
+  margin: 5px 0;
+  flex-flow: row; }
+  .contact-info span p {
+    -webkit-margin-before: 0;
+    -webkit-margin-after: 0; }
+
+.map-btn {
+  vertical-align: bottom;
+  border: 1px solid #FF5252;
+  padding: 1em;
+  color: #FF5252;
+  text-align: center !important;
+  cursor: pointer;
+  width: 80% !important;
+  margin-top: 1rem; }
+
+.map-btn:hover {
+  background-color: #FF5252;
+  color: #fff; }
 
 .social-icon {
-  margin: 0 5px; }
+  margin: 0 5px;
+  padding: .5rem;
+  border: 1px solid #fff;
+  border-radius: 50%;
+  width: 36px;
+  height: 36px;
+  text-align: center; }
+  .social-icon .fa {
+    color: #fff;
+    vertical-align: middle; }
 
 @media screen and (max-width: 420px) {
   .map-container {
