--- a/src/scss/framework/_reset.scss
+++ b/src/scss/framework/_reset.scss
@@ -1,3 +1,9 @@
+*, *::after, *::before, *:after, *:before {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
 body {
 	color: #333;
 	background-color: #fafafa;
