--- a/src/scss/layouts/_footer.scss
+++ b/src/scss/layouts/_footer.scss
@@ -3,10 +3,11 @@
 	position: relative;
 	height: calc(70vh + 18px);
 	color: $white;
+	font-size: 1.1em;
 	@extend %flex;
 	@extend %flex-column;
 }
-.map-toggler_open, .map-toggler_close {
+/*.map-toggler_open,*/ .map-toggler_close {
 	position: absolute;
 	top: 0;
 	right: 0;
@@ -29,44 +30,93 @@
     background-color: rgba(50,50,50,.9);
 	//color: #fff;
 	@extend %flex;
+	@extend %flex-center_vertical;
 }
 .footer-content {
 	@extend %full-width;
 	@extend %display-flex;
-	@extend %flex-between;
+	//@extend %flex-between;
 	flex-direction: row;
 	flex-wrap: wrap;
-	padding: 5rem 0;
+	//margin-top: 20%;
+	//padding: 5rem 0;
 	div {
-		@extend %flex;
-		@extend %flex-center;
+		//@extend %flex;
+		//@extend %flex-center;
 		width: 25%;
 	}
 	
 }
-
+.logo-icon {	
+	@extend %flex;
+	@extend %flex-center;
+}
 .logo-icon img {
 	width: 130px;
 }
 .footer-nav {
+	@extend %flex;
+	@extend %flex-center_horizontal;
 	flex-direction: column;
+	a {
+		color: $white;
+		margin: .3rem auto;
+	}
+	a.active {
+		border-bottom: 1px solid $white;
+	}
 }
 .contact-info {
-	flex-direction: column;
+	//flex-direction: column;
+	//align-items: flex-end !important;
 	span {
 		width: 90%;
 		text-align: left;
 		margin: 5px 0;
-		font-size: 1.2em;
+		flex-flow: row;
+		@extend %flex;
+		p {
+			-webkit-margin-before: 0;
+    		-webkit-margin-after: 0;
+		}
+
 	}
+}
+
+.map-btn {
+	vertical-align: bottom;
+	border: 1px solid $accent-color;
+	padding: 1em;
+	color: $accent-color;
+	text-align: center !important;
+	cursor: pointer;
+	width: 80% !important;
+	margin-top: 1rem;
+}
+.map-btn:hover {
+	background-color: $accent-color;
+	color: $white;
+}
+.social {
+	@extend %flex;
+	@extend %flex-center;
 }
 .social-icon {
 	margin: 0 5px;
-	//.fa { color: #fff;}
+	padding: .5rem;
+	border: 1px solid $white;
+	border-radius: 50%;
+	width: 36px;
+	height: 36px;
+	text-align: center;
+	.fa { 
+		color: $white;
+		vertical-align: middle;
+	}	
+	@extend %flex-center;
 }
 
 .trademark {
-	//color: #fff;
 }
 
 @media screen and (max-width: 420px) {
