poniendo los servicios

--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -103,11 +103,7 @@ function scaleBannerVideoSize(element){
             <div class="service-description-container">
                 <h3>Graphic Design</h3>
                 <p class="paragraph">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Itaque dolores illum ab laudantium ipsam, quia non,
-                    aspernatur exercitationem pariatur labore odit quidem
-                    officia eius expedita deserunt, beatae culpa sapiente
-                    perferendis.
+                    En B-markt, sabemos que comunicar la personalidad de una marca gráficamente es una tarea que debe ser gestionada cuidadosamente. Conocer y explotar el potencial del mensaje que se desea comunicar, es la tarea del equipo especialista que desarrolla tus conceptos en: identidad corporativa (logotipo y marca), papelería, cartelería, expresiones editoriales, diseño publicitario y web.
                 </p>
             </div>
         </div>
@@ -129,11 +125,7 @@ function scaleBannerVideoSize(element){
             <div class="service-description-container">
                 <h3 class="text-right">Development</h3>
                 <p class="paragraph">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Itaque dolores illum ab laudantium ipsam, quia non,
-                    aspernatur exercitationem pariatur labore odit quidem
-                    officia eius expedita deserunt, beatae culpa sapiente
-                    perferendis.
+                    La tecnología está a tu alcance y hacerla a un lado no es una opción. Porque el crecimiento de tu negocio se basa en la rapidez de gestión, creemos que la optimización y automatización de procesos mediante nuestros softwares son la solución práctica para potenciarte en el mercado. Estas soluciones son: sistemas de inventario, de contabilidad, páginas web, aplicaciones móviles, y plataformas de comercio electrónico.
                 </p>
             </div>
         </div>
@@ -143,11 +135,7 @@ function scaleBannerVideoSize(element){
             <div class="service-description-container">
                 <h3>Marketing</h3>
                 <p class="paragraph">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Itaque dolores illum ab laudantium ipsam, quia non,
-                    aspernatur exercitationem pariatur labore odit quidem
-                    officia eius expedita deserunt, beatae culpa sapiente
-                    perferendis.
+                    En Bmarkt creemos que establecer relaciones de valor duraderas entre el cliente y la empresa es vital para el éxito empresarial. Esto es posible mediante el conocimiento sistemático del cliente y por las herramientas digitales que se facilitan: investigaciones de mercado digital, dirección y organización de campañas de comunicación, posicionamiento de sitios web SEO y SEM, CRM, y Social Media.
                 </p>
             </div>
         </div>
